adjust phantom offset, fix table filler, overflow hidden on pages

--- a/public/css/order-manifest.css
+++ b/public/css/order-manifest.css
@@ -955,6 +955,7 @@ table {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   page-break-after: always;
+  overflow: hidden;
   padding-top: 0.2in;
   padding-bottom: 0.25in;
   padding-left: 0.25in;
